sfdx-source/force-app/main/default/objects/Interface_Transaction__c/Interface_Transaction__c.object-meta.xml
<CustomObject>
    <description>LEM-92: This Object is created for Integration retry mechanism</description>
    <label>Interface Transaction</label>
    <nameField>
        <displayFormat>IT-{00}</displayFormat>
        <label>Interface Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interface Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>