sfdx-source/force-app/main/default/objects/Interface_Transaction__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>