sfdx-source/force-app/main/default/objects/Interface_Transaction__c/fields/Failure_Point__c.field-meta.xml
<CustomField>
    <fullName>Failure_Point__c</fullName>
    <label>Failure Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>