sfdx-source/force-app/main/default/objects/Interface_Transaction__c/fields/Integration_Template__c.field-meta.xml
<CustomField>
    <fullName>Integration_Template__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13777: It stores the Integration Template specific to the integration scenario.</description>
    <label>Integration Template</label>
    <referenceTo>Integration_Template__c</referenceTo>
    <relationshipLabel>Interface Transactions</relationshipLabel>
    <relationshipName>Interface_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>