sfdx-source/force-app/main/default/objects/Interface_Transaction__c/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-92: This field is look up for Interface__c Object.</description>
    <label>Interface</label>
    <referenceTo>Interface__c</referenceTo>
    <relationshipLabel>Interface Transactions</relationshipLabel>
    <relationshipName>Interface_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>