sfdx-source/force-app/main/default/objects/Interface_Transaction__c/fields/Interface_Transaction_Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Transaction_Configuration_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13778: It stores the &apos;Interface Transaction Configuration&apos; custom metadata record name which contains the configurations specific to interface transaction record.</description>
    <label>Interface Transaction Configuration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>