sfdx-source/force-app/main/default/objects/Interface_Transaction__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>LEM-92: This field is to capture the payload of the transaction</description>
    <label>Payload</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>