sfdx-source/force-app/main/default/objects/Interface_Transaction__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13506: It stores the record id of related record the payload/Interface Transaction corresponds to.</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>