sfdx-source/force-app/main/default/objects/Interface_Transaction__c/fields/Remaining_Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Retry_Attempts__c</fullName>
    <description>LEM-92: This Field is to used to identify the remaining retry attempts of the particular interface Class</description>
    <label>Remaining Retry Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>